Fix frontend on iPhone

--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -1,5 +1,4 @@
 .main-content {
-    max-width: 100%;
     height: 100vh;
     aspect-ratio: 9/16;
     background-color: #fff;
